--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fruits-api",
+  "name": "agro-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -22,21 +22,19 @@
   "dependencies": {
     "@anatine/zod-nestjs": "^2.0.8",
     "@anatine/zod-openapi": "^2.2.5",
-    "@fastify/static": "^7.0.4",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/platform-fastify": "^10.3.9",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
-    "@prisma/client": "^5.15.0",
+    "@prisma/client": "^5.15.1",
+    "csv-parse": "^5.5.6",
+    "fs": "0.0.1-security",
     "multer": "1.4.5-lts.1",
     "nest-csv-parser": "^2.0.4",
-    "papaparse": "^5.4.1",
     "reflect-metadata": "^0.2.0",
     "sqlite3": "^5.1.7",
-    "typeorm": "^0.3.20",
     "unplugin-swc": "^1.4.5",
     "vite": "^5.3.1",
     "vite-tsconfig-paths": "^4.3.2",
@@ -63,8 +61,7 @@
     "globals": "^15.6.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.15.0",
-    "source-map-support": "^0.5.21",
+    "prisma": "^5.15.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
